added footer for smaller screens

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,7 @@
 @import url("https://use.typekit.net/hcd8vgd.css");
 
 * {
-  font-family: skolar-sans-latin, sans-serif;
+  font-family: "skolar-sans-latin", sans-serif;
 }
 
 h1,
